add local storage feature

--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
         <div id="nav-bar">
             <div class="nav-items">
                 <i class="fas fa-mask"></i>
-                Home
+                <a href="/">Home</a>
             </div>
             <div class="nav-items">
                 <i class="fas fa-heart"></i>
-                Favourites
+                <a href="favourite.html">Favourites</a>
             </div>
         </div>
     </div>
