add favourite section

--- a/superhero.html
+++ b/superhero.html
@@ -13,11 +13,11 @@
         <div id="nav-bar">
             <div class="nav-items">
                 <i class="fas fa-mask"></i>
-                Home
+                <a href="/">Home</a>
             </div>
             <div class="nav-items">
                 <i class="fas fa-heart"></i>
-                Favourites
+                <a href="favourite.html">Favourites</a>
             </div>
         </div>
     </div>
@@ -28,6 +28,7 @@
         </div>
         <div class="super-hero-details">
             <div id="hero-name" class="super-hero-name">Super Hero</div>
+            <div id="starred"></div>
             <div class="power-stats">
                 <div class="skill-progress">
                     <div id="intelligence" class="skill-color-blue skill-radius">
