fix issues of wrong link

--- a/favourite.html
+++ b/favourite.html
@@ -14,7 +14,7 @@
         <div id="nav-bar">
             <div class="nav-items">
                 <i class="fas fa-mask"></i>
-                <a href="/">Home</a>
+                <a href="index.html">Home</a>
             </div>
             <div class="nav-items">
                 <i class="fas fa-heart"></i>
