add responsive features

--- a/index.html
+++ b/index.html
@@ -13,23 +13,42 @@
     <div id="main-1">
         <div id="nav-bar">
             <div class="nav-items">
-                <i class="fas fa-mask"></i>
-                <a href="index.html">Home</a>
+                <a href="index.html">
+                    <i class="fas fa-mask"></i>
+                    Home</a>
             </div>
             <div class="nav-items">
-                <i class="fas fa-heart"></i>
-                <a href="favourite.html">Favourites</a>
+                <a href="favourite.html">
+                    <i class="fas fa-heart"></i>
+                    Favourites</a>
+            </div>
+            <div id="search-bar">
+                <div id="superhero-choose">
+                    <!-- <label for="name-input">Superhero Name : </label> -->
+                    <input type="text" name="superhero_name" placeholder="Super Hero Name" id="name-input">
+                </div>
+                <div class="btn" id="get-image">Find!</div>
+
             </div>
         </div>
+
+        <div id="ham-btn"><i class="fas fa-bars"></i></div>
+        <div id="ham-bar">
+            <div class="nav-items">
+                <a href="index.html">
+                    <i class="fas fa-mask"></i>
+                    Home</a>
+            </div>
+            <div class="nav-items">
+                <a href="favourite.html">
+                    <i class="fas fa-heart"></i>
+                    Favourites</a>
+            </div>
+        </div>
+
     </div>
 
-    <div id="search-bar">
-        <div id="superhero-choose">
-            <label for="name-input">Superhero Name : </label>
-            <input type="text" name="superhero_name" id="name-input">
-        </div>
-        <div class="btn" id="get-image">Get Images</div>
-    </div>
+
 
     <div id="main-2">
 
