fix minor features

--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             </div>
         </div>
 
+        <div id="heading-main"><i class="fas fa-atom"></i> Search Your Favourite Super Heroes</div>
+
     </div>
 
 
