add asthetic features

--- a/favourite.html
+++ b/favourite.html
@@ -21,6 +21,14 @@
                 <a href="favourite.html">Favourites</a>
             </div>
         </div>
+
+        <div id="toast-div">
+            <!-- Error -->
+        </div>
+        <div id="nothing-here">
+            Nothing to Show! Go to <a style="color: black; text-decoration: underline;" href="index.html">Home</a> and
+            Add some super heroes!
+        </div>
     </div>
 
     <div id="main-2">
