--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
             </div>
         </div>
 
-        <div id="heading-main"><i class="fas fa-atom"></i> Search Your Favourite Super Heroes</div>
+        <div id="heading-main"><i class="fas fa-atom"></i> Search Your Favourite Super Heroes here!</div>
+
+        <div id="toast-div">
+            <!-- Error -->
+        </div>
 
     </div>
 
