super hero page updated

--- a/superhero.html
+++ b/superhero.html
@@ -20,6 +20,9 @@
                 <a href="favourite.html">Favourites</a>
             </div>
         </div>
+        <div id="toast-div">
+            <!-- Error -->
+        </div>
     </div>
 
     <section id="main-info">
@@ -66,36 +69,110 @@
                     </div>
                 </div>
             </div>
-            <div class="bottom-margin-10px"> <strong>BIOGRAPHY :</strong></div>
-            <div id="hero-biography">
-                <div class="bottom-margin-10px">
-                    <span>Full Name : </span>
-                    <span class="bottom-margin-10px" id="full-name">Mr. Human</span>
-                </div>
-                <div class="bottom-margin-10px">
-                    <span>Alter-Egos :</span>
-                    <span class="bottom-margin-10px" id="ego">
-                        Homo Sapien Monkey
-                        <!--Superman Prime One-Million --></span>
-                </div>
-                <div class="bottom-margin-10px">
-                    <span class="less-important">Aliases : </span>
-                    <span class="less-important bottom-margin-10px" id="alias">
-                        Mr Human
-                        <!--"Clark Joseph Kent",
-                        "The Man of Steel",
-                        "the Man of Tomorrow",
-                        "the Last Son of Krypton",
-                        "Big Blue",
-                        "the Metropolis Marvel",
-                        "the Action Ace"</span> -->
-                </div>
 
-            </div>
         </div>
 
 
     </section>
+
+    <section class="details-section">
+        <div class="bottom-margin-10px section-heading">BIOGRAPHY</div>
+        <div id="hero-biography">
+            <div class="bottom-margin-10px">
+                <span class="less-important">Full Name : </span>
+                <span class="bottom-margin-10px" id="full-name">Mr. Human</span>
+            </div>
+            <div class="bottom-margin-10px">
+                <span class="less-important">Alter-Egos :</span>
+                <span class="bottom-margin-10px" id="alter-egos">
+                    Homo Sapien Monkey
+                </span>
+            </div>
+            <div class="bottom-margin-10px">
+                <span class="less-important">Aliases : </span>
+                <span class="bottom-margin-10px" id="aliases">
+                    Mr Human
+                </span>
+            </div>
+            <div class="bottom-margin-10px">
+                <span class="less-important">Place of birth : </span>
+                <span class="bottom-margin-10px" id="place-of-birth">
+                    Earth
+                </span>
+            </div>
+            <div class="bottom-margin-10px">
+                <span class="less-important">First Appearance : </span>
+                <span class="bottom-margin-10px" id="first-appearance">
+                    Comic #1
+                </span>
+            </div>
+            <div class="bottom-margin-10px">
+                <span class="less-important">Publisher : </span>
+                <span class="bottom-margin-10px" id="publisher">
+                    Marvel
+                </span>
+            </div>
+
+            <div class="bottom-margin-10px">
+                <span class="less-important">Alignment : </span>
+                <span class="bottom-margin-10px" id="alignment">
+                    Good
+                </span>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="details-section color-bg-blue">
+        <div class="bottom-margin-10px section-heading">APPEARENCE</div>
+        <div id="hero-biography">
+            <div class="bottom-margin-10px">
+                <span class="less-important">Gender : </span>
+                <span class="bottom-margin-10px" id="gender">M</span>
+            </div>
+            <div class="bottom-margin-10px">
+                <span class="less-important">Race : </span>
+                <span class="bottom-margin-10px" id="race">
+                    Human
+                </span>
+            </div>
+            <div class="bottom-margin-10px">
+                <span class="less-important">Height : </span>
+                <span class="bottom-margin-10px" id="height">
+                    5 10
+                </span>
+            </div>
+            <div class="bottom-margin-10px">
+                <span class="less-important">Weight : </span>
+                <span class="bottom-margin-10px" id="weight">
+                    80kg
+                </span>
+            </div>
+            <div class="bottom-margin-10px">
+                <span class="less-important">Eye Color : </span>
+                <span class="bottom-margin-10px" id="eye-color">
+                    black
+                </span>
+            </div>
+            <div class="bottom-margin-10px">
+                <span class="less-important">Hair Color : </span>
+                <span class="bottom-margin-10px" id="hair-color">
+                    red
+                </span>
+            </div>
+
+            <div class="bottom-margin-10px">
+                <span class="less-important">Alignment : </span>
+                <span class="bottom-margin-10px" id="alignment">
+                    Good
+                </span>
+            </div>
+
+        </div>
+    </section>
+
+
+
 
     <script src="scripts/superhero-script.js"></script>
     <script src="https://kit.fontawesome.com/c2e4f2d141.js" crossorigin="anonymous"></script>
