fix responsive feattures and add superhero details

--- a/superhero.html
+++ b/superhero.html
@@ -76,46 +76,46 @@
     </section>
 
     <section class="details-section">
-        <div class="bottom-margin-10px section-heading">BIOGRAPHY</div>
+        <div class="bottom-margin-20px section-heading">BIOGRAPHY</div>
         <div id="hero-biography">
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">Full Name : </span>
-                <span class="bottom-margin-10px" id="full-name">Mr. Human</span>
+                <span class="bottom-margin-20px" id="full-name">Mr. Human</span>
             </div>
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">Alter-Egos :</span>
-                <span class="bottom-margin-10px" id="alter-egos">
+                <span class="bottom-margin-20px" id="alter-egos">
                     Homo Sapien Monkey
                 </span>
             </div>
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">Aliases : </span>
-                <span class="bottom-margin-10px" id="aliases">
+                <span class="bottom-margin-20px" id="aliases">
                     Mr Human
                 </span>
             </div>
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">Place of birth : </span>
-                <span class="bottom-margin-10px" id="place-of-birth">
+                <span class="bottom-margin-20px" id="place-of-birth">
                     Earth
                 </span>
             </div>
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">First Appearance : </span>
-                <span class="bottom-margin-10px" id="first-appearance">
+                <span class="bottom-margin-20px" id="first-appearance">
                     Comic #1
                 </span>
             </div>
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">Publisher : </span>
-                <span class="bottom-margin-10px" id="publisher">
+                <span class="bottom-margin-20px" id="publisher">
                     Marvel
                 </span>
             </div>
 
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">Alignment : </span>
-                <span class="bottom-margin-10px" id="alignment">
+                <span class="bottom-margin-20px" id="alignment">
                     Good
                 </span>
             </div>
@@ -124,50 +124,86 @@
     </section>
 
     <section class="details-section color-bg-blue">
-        <div class="bottom-margin-10px section-heading">APPEARENCE</div>
+        <div class="bottom-margin-20px section-heading">APPEARENCE</div>
         <div id="hero-biography">
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">Gender : </span>
-                <span class="bottom-margin-10px" id="gender">M</span>
+                <span class="bottom-margin-20px" id="gender">M</span>
             </div>
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">Race : </span>
-                <span class="bottom-margin-10px" id="race">
+                <span class="bottom-margin-20px" id="race">
                     Human
                 </span>
             </div>
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">Height : </span>
-                <span class="bottom-margin-10px" id="height">
+                <span class="bottom-margin-20px" id="height">
                     5 10
                 </span>
             </div>
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">Weight : </span>
-                <span class="bottom-margin-10px" id="weight">
+                <span class="bottom-margin-20px" id="weight">
                     80kg
                 </span>
             </div>
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">Eye Color : </span>
-                <span class="bottom-margin-10px" id="eye-color">
+                <span class="bottom-margin-20px" id="eye-color">
                     black
                 </span>
             </div>
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">Hair Color : </span>
-                <span class="bottom-margin-10px" id="hair-color">
+                <span class="bottom-margin-20px" id="hair-color">
                     red
                 </span>
             </div>
 
-            <div class="bottom-margin-10px">
+            <div class="bottom-margin-20px">
                 <span class="less-important">Alignment : </span>
-                <span class="bottom-margin-10px" id="alignment">
+                <span class="bottom-margin-20px" id="alignment">
                     Good
                 </span>
             </div>
 
+        </div>
+    </section>
+
+    <section class="details-section">
+        <div class="bottom-margin-20px section-heading">WORK</div>
+        <div id="hero-biography">
+            <div class="bottom-margin-20px">
+                <span class="less-important">Occupation : </span>
+                <span class="bottom-margin-20px" id="occupation">
+                    Plumber
+                </span>
+            </div>
+            <div class="bottom-margin-20px">
+                <span class="less-important">Base :</span>
+                <span class="bottom-margin-20px" id="base">
+                    Home
+                </span>
+            </div>
+        </div>
+    </section>
+
+    <section class="details-section color-bg-blue">
+        <div class="bottom-margin-20px section-heading">CONNECTIONS</div>
+        <div id="hero-biography">
+            <div class="bottom-margin-20px">
+                <span class="less-important">Group Affiliation : </span>
+                <span class="bottom-margin-20px" id="group-affiliation">
+                    Avengers
+                </span>
+            </div>
+            <div class="bottom-margin-20px">
+                <span class="less-important">Relatives :</span>
+                <span class="bottom-margin-20px" id="relatives">
+                    Wife
+                </span>
+            </div>
         </div>
     </section>
 
