refactoring and adding comments

--- a/favourite.html
+++ b/favourite.html
@@ -10,6 +10,7 @@
 
 <body>
 
+    <!-- Div for navigation bar -->
     <div id="main-1">
         <div id="nav-bar">
             <div class="nav-items">
@@ -22,14 +23,19 @@
             </div>
         </div>
 
+        <!-- div to show toast/notification -->
         <div id="toast-div">
             <!-- Error -->
         </div>
+
+        <!-- div to indicate that it is empty -->
         <div id="nothing-here">
             Nothing to Show! Go to <a style="color: black; text-decoration: underline;" href="index.html">Home</a> and
             Add some super heroes!
         </div>
     </div>
+
+    <!-- div for containing all the favourite super hero cards -->
 
     <div id="main-2">
 
@@ -51,7 +57,7 @@
 
     </div>
 
-
+    <!-- script files and fontawesome scripts -->
     <script src="scripts/favourite-script.js"></script>
     <script src="https://kit.fontawesome.com/c2e4f2d141.js" crossorigin="anonymous"></script>
 
