--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
 
+    <!-- This div contains navbar and search bar -->
     <div id="main-1">
         <div id="nav-bar">
             <div class="nav-items">
@@ -22,6 +23,9 @@
                     <i class="fas fa-heart"></i>
                     Favourites</a>
             </div>
+
+            <!-- Search bar -->
+
             <div id="search-bar">
                 <div id="superhero-choose">
                     <!-- <label for="name-input">Superhero Name : </label> -->
@@ -32,7 +36,10 @@
             </div>
         </div>
 
+        <!-- Hamburger menu for smaller screens -->
+
         <div id="ham-btn"><i class="fas fa-bars"></i></div>
+
         <div id="ham-bar">
             <div class="nav-items">
                 <a href="index.html">
@@ -46,8 +53,13 @@
             </div>
         </div>
 
+
+        <!-- div to indicate user to search -->
+
         <div id="heading-main"><i class="fas fa-atom"></i> Search Your Favourite Super Heroes here!</div>
 
+
+        <!-- fixed div to show toasts -->
         <div id="toast-div">
             <!-- Error -->
         </div>
@@ -55,6 +67,7 @@
     </div>
 
 
+    <!-- div to insert superhero cards -->
 
     <div id="main-2">
 
@@ -77,6 +90,7 @@
     </div>
 
 
+    <!-- script files and fontawesome scripts -->
     <script src="scripts/home-script.js"></script>
     <script src="https://kit.fontawesome.com/c2e4f2d141.js" crossorigin="anonymous"></script>
 
