--- a/superhero.html
+++ b/superhero.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="css/superhero-style.css">
 </head>
 
+<!-- Navigation bar div -->
+
 <body>
     <div id="main-1">
         <div id="nav-bar">
@@ -20,11 +22,15 @@
                 <a href="favourite.html">Favourites</a>
             </div>
         </div>
+
+        <!-- div to show toast/notification -->
+
         <div id="toast-div">
             <!-- Error -->
         </div>
     </div>
 
+    <!-- Contains superhero name and image and skills -->
     <section id="main-info">
         <div class="hero-img-container">
             <img id="main-hero-img" class="hero-img" src="assets/imgErr.jpg" alt="">
@@ -75,6 +81,8 @@
 
     </section>
 
+    <!-- div for superhero biography -->
+
     <section class="details-section">
         <div class="bottom-margin-20px section-heading">BIOGRAPHY</div>
         <div id="hero-biography">
@@ -123,8 +131,10 @@
         </div>
     </section>
 
+    <!-- div for superhero appearance -->
+
     <section class="details-section color-bg-blue">
-        <div class="bottom-margin-20px section-heading">APPEARENCE</div>
+        <div class="bottom-margin-20px section-heading">APPEARANCE</div>
         <div id="hero-biography">
             <div class="bottom-margin-20px">
                 <span class="less-important">Gender : </span>
@@ -171,6 +181,10 @@
         </div>
     </section>
 
+
+    <!-- div for superhero Work -->
+
+
     <section class="details-section">
         <div class="bottom-margin-20px section-heading">WORK</div>
         <div id="hero-biography">
@@ -188,6 +202,9 @@
             </div>
         </div>
     </section>
+
+    <!-- div for superhero connections -->
+
 
     <section class="details-section color-bg-blue">
         <div class="bottom-margin-20px section-heading">CONNECTIONS</div>
