--- a/favourite.html
+++ b/favourite.html
@@ -30,8 +30,10 @@
 
         <!-- div to indicate that it is empty -->
         <div id="nothing-here">
+        <span id="headin-in">
             Nothing to Show! Go to <a style="color: black; text-decoration: underline;" href="index.html">Home</a> and
             Add some super heroes!
+        </span>
         </div>
     </div>
 
