--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <!-- div to indicate user to search -->
 
-        <div id="heading-main"><i class="fas fa-atom"></i> Search Your Favourite Super Heroes here!</div>
+        <div id="heading-main"><span id="headin-in"> &nbsp; <img style="width: 27px; height: 27px;" src="assets/superhero.png" alt=""> Search Your Favourite Super Heroes here! &nbsp;</span></div>
 
 
         <!-- fixed div to show toasts -->
