--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hunt the superhero</title>
     <link rel="stylesheet" href="css/home-style.css">
+    <link rel="icon" type="image/png" href="favicon.ico?">
 </head>
 
 <body>
