--- a/superhero.html
+++ b/superhero.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Hero</title>
     <link rel="stylesheet" href="css/superhero-style.css">
+    <link rel="icon" type="image/png" href="favicon.ico?">
 </head>
 
 <!-- Navigation bar div -->
